snipeit-k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snipeit
  namespace: snipeit
  labels:
    app: snipeit
spec:
  replicas: 3
  selector:
    matchLabels:
      app: snipeit
  template:
    metadata:
      labels:
        app: snipeit
    spec:
      securityContext:
        fsGroup: 1000  # Menyamakan grup agar akses NFS lancar
      containers:
      - name: snipeit
        image: snipe/snipe-it:v8.3.7
        volumeMounts:
        - name: snipeit-data
          mountPath: /var/lib/snipeit  # Path yang benar untuk image linuxserver/snipe-it
      volumes:
      - name: snipeit-data
        persistentVolumeClaim:
          claimName: snipeit-pvc
