snipeit-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snipeit-svc
  namespace: snipeit
spec:
  selector:
    app: snipeit
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
